overlap fix4
fix?

--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,7 @@ width: 73%;
     }
     
     #text_welcome{
-    margin: 20px 10px 10px 30px;
+    margin: 20px 10px 10px 33px;
     text-align: left;
     width: 90%;
     }
